--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -30,11 +30,18 @@
             margin: 0.25rem auto;
         }
     }
+    /* For header text */
+    
+    @media (max-width: 576px) {
+        .text {
+            font-size: 320%;
+        }
+    }
 </style>
 {% endblock content-blog %} {% block content %}
-<div style="padding-top:100px;"></div>
+<div style="padding-top:90px;"></div>
 <!-- Hero Header -->
-<div class="page-header" data-parallax="true" style="background-image: url(../../../media/bg-images/premium4.jpeg); height: 500px;">
+<div class="page-header" data-parallax="true" style="background-image: url(../../../media/bg-images/premium4.jpeg); height: 570px;">
     <div class="container" style="text-align:center; overflow: hidden;">
         <p class="text"> <span class="text__first"><span class="text__word" style="font-size: 4rem;">WELCOME TO</span><span class="text__first-bg"></span></span><br/><span class="text__second"><span class="text__word">SPE IIT(ISM) STUDENT CHAPTER</span>
             <span class="text__second-bg"></span>
@@ -153,8 +160,8 @@
                                 <span class="counter">1000</span>
                             </div>
                             <div class="count-text ">
-                                <p>lorem ipsum</p>
-                                <h5>text</h5>
+                                <p>Number of Lives</p>
+                                <h5>IMPACTED</h5>
                             </div>
                         </div>
                     </div>
@@ -163,11 +170,11 @@
                     <div class="count-clients ">
                         <div class="single-counter ">
                             <div class="count-number ">
-                                <span class="counter">1500</span>
+                                <span class="counter">500</span>
                             </div>
                             <div class="count-text ">
-                                <p>lorem ipsum</p>
-                                <h5>pro</h5>
+                                <p>Professional Collaborations</p>
+                                <h5>COMPANIES</h5>
                             </div>
                         </div>
                     </div>
@@ -179,8 +186,8 @@
                                 <span class="counter">1800</span>
                             </div>
                             <div class="count-text ">
-                                <p>lorem ipsum</p>
-                                <h5>text</h5>
+                                <p>Social Media Reach</p>
+                                <h5>FOLLOWERS</h5>
                             </div>
                         </div>
                     </div>
