--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -51,7 +51,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li><a href="{% url 'home-page' %}" class="nav-item nav-link active" style="font-size: 23px;">Home</a></li>
                     <li class="dropdown">
-                        <a href="#" class="nav-item nav-link" style="font-size: 23px;" data-toggle="dropdown">Resourceszzzzz</a>
+                        <a href="#" class="nav-item nav-link" style="font-size: 23px;" data-toggle="dropdown">Resources</a>
                         <div class="dropdown-menu">
                             <a href="{% url 'blog-home' %}" class="dropdown-item">Blogs</a>
                             <a href="{% url 'gazette-page' %}" class="dropdown-item">Gazette</a>
