--- a/SPE-website/pages/static/pages/core-team0.css
+++ b/SPE-website/pages/static/pages/core-team0.css
@@ -174,4 +174,12 @@
     width:150px;
     height:180px;
 }
+
+h1.card-title { font-size: 1.2em; }
+
+hr.underline { margin-bottom: 10px; }
+
+p.card-content { font-size: 0.85em; }
+
+i.fa { font-size: 1.25em; bottom: 15px; }
 }
