--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -186,13 +186,13 @@
                     <div class="flip-card">
                       <div class="flip-card-inner">
                         <div class="flip-card-front">
-                          <img class="round-img" src="{% static 'pages/team-images/jon-snow.jpg' %}" alt="Avatar">
+                          <img class="round-img" src="{% static 'pages/office-bearers/jalaj-sir.jpg' %}" alt="Avatar">
                         </div>
                         <div class="flip-card-back flip-border"
-                             style="background-image: url(/media/core-team_images/jon-snow-blur.jpg);">
-                          <h1 class="card-title" style="color: black;">Jalaj Tripathi</h1>
-                          <hr class="underline" style="background-color: black;">
-                          <p class="card-content" style="color: black;">Program Chairperson</p>
+                             style="background-image: url(/static/pages/office-bearers/jalaj-sir-blur.jpg);">
+                          <h1 class="card-title" style="color: white;">Jalaj Tripathi</h1>
+                          <hr class="underline" style="background-color: white;">
+                          <p class="card-content" style="color: white;">Program Chairperson</p>
                           <a href="https://www.linkedin.com/in/jalaj-tripathi-78768615a/"><i class="fa fa-linkedin"></i></a>
                           <a href="https://www.facebook.com/jalaj.tripathi.188"><i class="fa fa-facebook"></i></a>
                         </div>
@@ -230,15 +230,15 @@
                     <div class="flip-card">
                       <div class="flip-card-inner">
                         <div class="flip-card-front">
-                          <img class="round-img" src="{% static 'pages/office-bearers/HOD.jpg' %}" alt="Avatar">
+                          <img class="round-img" src="{% static 'pages/developer-img/rajwardhan-sir.jpg' %}" alt="Avatar">
                         </div>
                         <div class="flip-card-back flip-border"
-                             style="background-image: url(/static/pages/office-bearers/HOD-blur.jpg);">
-                          <h1 class="card-title" style="color: black;">Dr. Ajay Mandal</h1>
-                          <hr class="underline" style="background-color: black;">
-                          <p class="card-content" style="color: black;">Head of the Department, Petroleum Engineering Department</p>
-                          <a href="https://www.linkedin.com/in/ajay-mandal-62762524/"><i class="fa fa-linkedin"></i></a>
-                          <a href="https://www.facebook.com/mandal.ajay"><i class="fa fa-facebook"></i></a>
+                             style="background-image: url(/static/pages/developer-img/rajwardhan-sir-blur.jpg);">
+                          <h1 class="card-title" style="color: white;">Rajvardhan Rawat</h1>
+                          <hr class="underline" style="background-color: white;">
+                          <p class="card-content" style="color: white;"></p>
+                          <a href="https://www.linkedin.com/in/rajvardhanrawat/"><i class="fa fa-linkedin"></i></a>
+                          <a href="#"><i class="fa fa-facebook"></i></a>
                         </div>
                       </div>
                     </div>
@@ -248,15 +248,15 @@
                     <div class="flip-card">
                       <div class="flip-card-inner">
                         <div class="flip-card-front">
-                          <img class="round-img" src="{% static 'pages/office-bearers/covener.jpg' %}" alt="Avatar">
+                          <img class="round-img" src="{% static 'pages/developer-img/raj-sir.jpg' %}" alt="Avatar">
                         </div>
                         <div class="flip-card-back flip-border"
-                             style="background-image: url(/static/pages/office-bearers/covener-blur.jpg);">
-                          <h1 class="card-title" style="color: white;">Dr. Neetish Kumar Maurya</h1>
-                          <hr class="underline" style="background-color: white;">
-                          <p class="card-content" style="color: white;">Faculty Convener</p>
-                          <a href="https://www.facebook.com/neetishmaurya"><i class="fa fa-facebook"></i></a>
-                          <a href=" https://www.linkedin.com/in/neetish-kumar-maurya-22b08a1a/?originalSubdomain=in">
+                             style="background-image: url(/static/pages/developer-img/raj-sir-blur.jpg);">
+                          <h1 class="card-title" style="color: black;">Raj Kumar Singh</h1>
+                          <hr class="underline" style="background-color: black;">
+                          <p class="card-content" style="color: white;"></p>
+                          <a href="#"><i class="fa fa-facebook"></i></a>
+                          <a href="https://www.linkedin.com/in/raj-kumar-singh-272a8b179">
                               <i class="fa fa-linkedin"></i></a>
                         </div>
                       </div>
