Notable Aluminis added

--- a/SPE-website/pages/templates/pages/about.html
+++ b/SPE-website/pages/templates/pages/about.html
@@ -198,77 +198,75 @@
 </div>
 
 
-<!-- FACULTY ACHIEVEMENTS -->
+<!-- NOTABLE ALUMINIS -->
 
 <div class="container" style="overflow: hidden !important; padding: 5% 0%;" data-aos="fade-up" data-aos-duration="1500">
     <div style="font-family: 'Dosis', sans-serif; color:#323d47; text-align:center;overflow: hidden !important;">
-        <p style="font-size:5rem; font-weight: 700;">FACULTY ACHIEVEMENTS</p>
+        <p style="font-size:5rem; font-weight: 700;">NOTABLE ALUMINIS</p>
         <br>
-        <p style="font-size:3.0rem;">DR. AJAY MANDAL</p>
-        <p style="color: #757575; font-size: 2.2rem;">Professor( Petroleum Engineering )</p>
-        <br>
-    </div>
-    <div style="text-align: center;">
-        <img style="width:200px; height: auto;" src="https://iitism.irins.org/assets/profile_images/608632.jpg" alt="Prof. Ajay Mandal">
-    </div>
-    <div style="font-size: 2rem; padding: 5% 0%;">
-        <p>Dr. Ajay Mandal is currently working as Professor & Head of the Department of Petroleum Engineering at the Indian Institute of Technology (Indian School of Mines), Dhanbad. He has made us proud numerous times with his achievements:
-            <ul>
-                <li> Dr. Mandal is a recipient of the prestigious DAAD Fellowship of Germany in 2008.</li>
-                <li>He has been awarded 2019 SPE Reservoir Dynamics and Description Regional Award for South Asia and Pacific region & 2015 SPE South Asia Regional Distinguished Achievement Award for Petroleum Engineering Faculty.</li>
-                <li>IIChE (Indian Institute of Chemical Engineers) Award for the Year 2017 (ONGC Award for Excellence in Design and Development).</li>
-                <li>The Inder Mohan Thapar Foundation (IMTF) Research Award from IIT(ISM) for the year 2016-17, 17-18 and 18-19 (Jointly with Ph.D. students).</li>
-                <li>Canara Bank Best Research Award in IIT (ISM), 2014 & 2015, 2016, 2017, 2018.</li>
-            </ul>
-            Dr. Mandal guided 12 Doctoral students and 12 students are currently pursuing their Ph.D. He was deputed to the Institute of Reservoir Studies, ONGC under the Industry-Academic interaction program for 1 year. Dr. Mandal carried out collaborative research
-            work with the Department of Petroleum Engineering, Institute of Curtin University of Technology, under the Australia-India Joint Research Program, 2016. He also visited University Technology of Petronas, Malaysia and National University Singapore
-            as a collaborative Research visit. Dr. Mandal is a member of ER Screening committee of the Ministry of Petroleum and Natural Gas.
-
+        <!-- <p style="font-size:3.0rem;">DR. AJAY MANDAL</p> -->
+        <p style="color: #757575; font-size: 2.2rem;">IIT(ISM) Dhanbad has a strong alumni base with our alumni carving a niche for themselves in every field. We have a lasting legacy of making a remarkable contribution to the industries associated with Earth resources and energy. IIT (ISM) rising
+            global stature is credited to its charismatic alumni whose stupendous achievements in myriad fields continue to make us proud. They act as brand ambassadors of the institute and provide to the institute and its students an incredible network
+            for mentorship and other academic and professional engagements. Our esteemed alumni have always been our most valuable resource.
         </p>
+        <br>
     </div>
+    <main>
+        <ol class="gradient-list">
+            <li><strong>Dr. Ram Gopal Agarwal</strong> (Batch of 1961)
+                <p>
+                    VP - PetroTel, Ex Sr. Tech. Advisor BP, AIME Hon. Member, SPE Distinguished Member.
+                </p>
+            </li>
+            <li><strong>Dr. Anil Kumar</strong> (Batch of 1965)
+                <p>
+                    Prestigious "Anthony F. Lucas Gold Medal" award winner presented by the Society of Petroleum Engineers.
+                </p>
+            </li>
+            <li><strong>Shri Naresh Vashisht</strong> (Batch of 1967)
+                <p>
+                    Founder and President - Omimex resources Inc. Philanthropist.
+                </p>
+            </li>
+            <li><strong>Dr. Ganesh Thakur</strong> (Batch of 1970)
+                <p>
+                    Professor of Petroleum Engineering at University of Houston, Ex-VP Chevron.
+                </p>
+            </li>
+            <li><strong>Shri NK Mitra</strong> (Batch of 1972)
+                <p>
+                    Chief Advisor - McDermott International Ltd, Ex-Director (Offshore) - ONGC.
+                </p>
+            </li>
+            <li><strong>Dr. Akhil Datta Gupta </strong> (Batch of 1980)
+                <p>
+                    Professor & LeSuer Chair - Texas A&M University, Member - N.A.E., SPE Hon. Member.
+                </p>
+            </li>
+            <li><strong>Shri Sidhartha Sur</strong> (Batch of 1980)
+                <p>
+                    Director (Operations) - AskEOR Tech Hydrocarbon Pvt Ltd, Ex-Director (IRS) - ONGC, Ex-CEO - Mansarovar Energy Colombia Ltd.
+                </p>
+            </li>
+            <li><strong>Mr Utpal Bora</strong> (Batch of 1981)
+                <p>
+                    Chairman and Managing Director - Oil India Limited (OIL).
+                </p>
+            </li>
+            <li><strong>Shri Shashi Shankar</strong> (Batch of 1982)
+                <p>
+                    Chairman & Managing Director - ONGC.
+                </p>
+            </li>
+            <li><strong>Anoop Poddar</strong> (Batch of 1994)
+                <p>
+                    Senior Partner and President of EV Private Equity, an independent growth equity firm, former CEO and one of the founding members of the private equity firm First Reserve Momentum.
+                </p>
+            </li>
+        </ol>
+    </main>
 </div>
 
-<div class="container" style="overflow: hidden !important;" data-aos="fade-up" data-aos-duration="1500">
-    <div style="text-align:center;">
-        <p style="font-family: 'Dosis', sans-serif; font-size:3.0rem;color:#323d47; ">DR. KEKA OJHA</p>
-        <p style="color: #757575; font-size: 2.2rem; ">Professor( Petroleum Engineering )</p>
-        <br>
-    </div>
-    <div style="text-align: center !important;">
-        <img style="width:200px; height:auto; " src="https://www.iitism.ac.in/assets/employee/803/803.jpg" alt="Prof. Keka Ojha">
-    </div>
-    <div style="font-size: 2rem; padding: 5% 0%; ">
-        <p>"A leader is someone who knows the way, shows the way and goes the way." Dr. Keka Ojha, the Professor of the Petroleum engineering department at IIT ISM Dhanbad genuinely exemplifies this quote. She has been applauded and recognized for her research
-            works many times and we have mentioned some of them:
-            <ul>
-                <li>She was felicitated with the Best Paper in Petrotech conference in 2009 held at Delhi, for her paper on "Hydraulic Fracturing".</li>
-                <li>She also received an Excellent Paper award in Thailand in 2011 in a conference on CBMs. </li>
-                <li>While her research works were getting applauded, she received the honour of SPE Distinguished Faculty (South Asia Pacific region) 2019 for her tremendous contribution to the teaching sector.</li>
-            </ul>
-            She has been guiding students of petroleum engineering for more than 15 years. Besides being an excellent professor and researcher, she has also served in many administrative positions. She is currently appointed as Associate Dean Academic for Undergraduates
-            at IIT (ISM).
-        </p>
-    </div>
-</div>
-
-<div class="container" style="overflow: hidden !important;" data-aos="fade-up " data-aos-duration="1500">
-    <div style="text-align:center;">
-        <p style="font-family: 'Dosis', sans-serif; font-size:3.0rem;color:#323d47; ">Prof. Tarkeshwar Kumar</p>
-        <p style="color: #757575; font-size: 2.2rem; ">Professor( Petroleum Engineering )</p>
-        <br>
-    </div>
-    <div style="text-align: center !important;">
-        <img style="width:200px; height:auto; " src="https://www.iitism.ac.in/assets/employee/66/66.jpg" alt="Prof. T kumar">
-    </div>
-    <div style="font-size: 2rem; padding: 5% 0%; ">
-        <p>
-            <ul>
-                <li>Won the prestigious National Mineral Award in 2008</li>
-                <li>Served as a director of IIT(ISM) Dhanbad, NIFT Ranchi and NIT Durgapur for a period of 10 years</li>
-            </ul>
-        </p>
-    </div>
-</div>
 
 <!-- SCROLL DOWN JS -->
 <script>
