--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -119,7 +119,7 @@
                 <div class="post-left_border"></div>
                 <div class="post-left_author">
                     <img src="http://127.0.0.1:8000/static/pages/landingpage-bg/chapter-inv-logo.png">
-                    <p>Author Name</p>
+                    <p>Anantharaman Shankar</p>
                 </div>
             </div>
             <div class="post-right">
