--- a/SPE-website/events/templates/events/home.html
+++ b/SPE-website/events/templates/events/home.html
@@ -67,7 +67,7 @@
     </div>
 
     <!-- Next/Previous Button Group -->
-    <div class="d-flex justify-content-center">
+    <!-- <div class="d-flex justify-content-center">
         {% if is_paginated %} {% if page_obj.has_previous %}
         <a class="btn btn-grp mb-4" href="?page={{ page_obj.previous_page_number }}">
             <span class="material-icons">arrow_back_ios</span>
@@ -80,9 +80,34 @@
                 <span class="material-icons">arrow_forward_ios</span>
             </a>
             {% endif %} {% endif %}
-    </div>
+    </div> -->
+    
     <!-- Next/Previous Button Group -->
+    <div class="d-flex justify-content-center">
+        {% if is_paginated %}
 
+            {% if page_obj.has_previous %}
+                <a class="btn btn-grp mb-4" href="?page={{ page_obj.previous_page_number }}">
+                    <span class="material-icons">arrow_back_ios</span>
+                </a>
+            {% endif %}
+
+            {% for num in page_obj.paginator.page_range %}
+                {% if page_obj.number == num %}
+                    <a class="btn btn-grp mb-4" href="?page={{ num }}">{{ num }}</a>
+                {% elif num > page_obj.number|add:'-2' and num < page_obj.number|add:'2' %}
+                    <a class="btn btn-grp mb-4" href="?page={{ num }}">{{ num }}</a>
+                {% endif %}
+            {% endfor %}
+
+            {% if page_obj.has_next %}
+            <a class="btn btn-grp mb-4" href="?page={{ page_obj.next_page_number }}">
+                <span class="material-icons">arrow_forward_ios</span>
+            </a>
+            {% endif %}
+
+        {% endif %}
+    </div>
 </div>
 
 
