--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -223,7 +223,7 @@
             <h1 class="office-bearers d-flex justify-content-center">Developer Team:</h1>
             <hr class="office-bearers-underline d-block mx-auto" style="margin-bottom: 40px;">
         </div>
-        <div class="d-block mx-auto">
+        <div class="d-block mx-auto col-md-11">
                 <div class="grid-container">
 
                     <!-- Card -->
