--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -39,7 +39,7 @@
 {% endblock content-blog %} {% block content %}
 <div style="padding-top:90px;"></div>
 <!-- Hero Header -->
-<div class="page-header" data-parallax="true" style="background-image: url(../../../media/bg-images/premium4.jpeg); height: 570px;">
+<div class="page-header" data-parallax="true" style="background-image: url(/media/bg-images/premium4.jpeg); height: 570px;">
     <div class="container" style="text-align:center; overflow: hidden;">
         <p class="text"> <span class="text__first"><span class="text__word" style="font-size: 4rem;">WELCOME TO</span><span class="text__first-bg"></span></span><br/><span class="text__second"><span class="text__word">SPE IIT(ISM) STUDENT CHAPTER</span>
             <span class="text__second-bg"></span>
@@ -116,7 +116,7 @@
                 <div class="post-left_title_sub">Popular Blog</div>
                 <div class="post-left_border"></div>
                 <div class="post-left_author">
-                    <img src="http://127.0.0.1:8000/static/pages/landingpage-bg/chapter-inv-logo.png">
+                    <img src="/static/pages/landingpage-bg/chapter-inv-logo.png">
                     <p>Anantharaman Shankar</p>
                 </div>
             </div>
@@ -212,7 +212,7 @@
             </div>
             <div class="col-md-6 offset-md-2 col-sm-12 " style="color: black !important;font-family: 'Dosis', sans-serif; margin-bottom: 8%;" data-aos="fade-up " data-aos-duration="1500">
                 <p style="font-size: 4rem; font-weight: 700; text-align: center; ">GAZETTE 2020</p>
-                <div class="card-gazette " style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url( '../../../media/blog_images/oilrig_q8U2v17.jpg') ">
+                <div class="card-gazette " style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url( '/media/blog_images/oilrig_q8U2v17.jpg') ">
                     <div class="gazette-body ">
                         <h3 class="card-title " style="font-weight: 500; font-size: 2.5rem; color:#fff; ">ILLUSTRATING UNCONVENTIONAL PASSION</h3>
                         <p class="card-description ">
@@ -254,7 +254,7 @@
         <div class="row" id="mainwrapper" style="padding:2% 0%;padding-bottom: 10%;">
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <div id="box-1" class="box" style="left: 50px;">
-                    <a href="http://www.askeor.com/index.html"><img id="image-1" src="../../../media/about_images/askeor.png" style="top:45px; object-fit: contain; overflow: hidden !important; width: 100%; max-height: 100%;"></a>
+                    <a href="https://www.askeor.com/index.html"><img id="image-1" src="../../../media/about_images/askeor.png" style="top:45px; object-fit: contain; overflow: hidden !important; width: 100%; max-height: 100%;"></a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
