--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -254,7 +254,7 @@
         <div class="row" id="mainwrapper" style="padding:2% 0%;padding-bottom: 10%;">
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <div id="box-1" class="box" style="left: 50px;">
-                    <a href="https://www.askeor.com/index.html"><img id="image-1" src="../../../media/about_images/askeor.png" style="top:45px; object-fit: contain; overflow: hidden !important; width: 100%; max-height: 100%;"></a>
+                    <a href="https://www.askeor.com/index.html"><img id="image-1" src="/media/about_images/askeor.png" style="top:45px; object-fit: contain; overflow: hidden !important; width: 100%; max-height: 100%;"></a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
