simple gallery made

--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -81,8 +81,8 @@
                           <hr class="underline" style="background-color: white;">
                           <p class="card-content" style="color: white;">President</p>
                           <a href="https://www.linkedin.com/in/debosmit-banerjee/?originalSubdomain=in">
-                              <i class="fa fa-linkedin" style="left: 117px;"></i></a>
-<!--                          <a href="#"><i class="fa fa-facebook"></i></a>-->
+                              <i class="fa fa-linkedin"></i></a>
+                          <a href="#"><i class="fa fa-facebook"></i></a>
                         </div>
                       </div>
                     </div>
