home renamed gallery styled

--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -1,5 +1,5 @@
 {% extends 'pages/base.html' %} {% load static %} {% block content-blog %}
-<link type="text/css" href="{% static 'pages/Home.css' %}">
+<link type="text/css" href="{% static 'pages/home.css' %}">
 <style>
     marquee {
         max-height: 230px;
