--- a/SPE-website/pages/templates/pages/gallery1.html
+++ b/SPE-website/pages/templates/pages/gallery1.html
@@ -1,21 +1,16 @@
-{% extends 'pages/base.html' %}
-{% load static %}
-
-{% block content-blog %}
-    <link rel="stylesheet" type="text/css" href="{% static 'pages/gallery-css/common.css' %}">
+{% extends 'pages/base.html' %} {% load static %} {% block content-blog %}
+<link rel="stylesheet" type="text/css" href="{% static 'pages/gallery-css/common.css' %}">
 <!--    <link rel="stylesheet" type="text/css" href="{% static 'pages/gallery-css/gallery1-e1.css' %}">-->
 <!--    <link rel="stylesheet" type="text/css" href="{% static 'pages/gallery-css/gallery1-e2.css' %}">-->
 <!--    <link rel="stylesheet" type="text/css" href="{% static 'pages/gallery-css/gallery1-e3.css' %}">-->
 <!--    <link rel="stylesheet" type="text/css" href="{% static 'pages/gallery-css/gallery1-e4.css' %}">-->
 <!--    <link rel="stylesheet" type="text/css" href="{% static 'pages/gallery-css/gallery1-e5.css' %}">-->
-{% endblock content-blog %}
-
-{% block content %}
-    <br><br><br><br><br>
+{% endblock content-blog %} {% block content %}
+<br><br><br><br><br>
 <!--<img class="gal-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">-->
-        <h1 class="d-flex justify-content-center" style="color: black; font-family: 'adam.cg pro'; font-size: 60px;">Gallery</h1>
-        <hr class="d-block mx-auto" style="width: 210px; height: 1px; background-color: #007bff; margin-bottom: 50px;">
-        <br><br>
+<h1 class="d-flex justify-content-center" style="color: black; font-family: 'adam.cg pro'; font-size: 60px;">Gallery</h1>
+<hr class="d-block mx-auto" style="width: 210px; height: 1px; background-color: #007bff; margin-bottom: 50px;">
+<br><br>
 
 <!--    &lt;!&ndash; Event 1&ndash;&gt;-->
 <!--    <div class="d-block mx-auto" style="width: 1000px;">-->
@@ -261,71 +256,78 @@
 <!--   &lt;!&ndash; Event 5 &ndash;&gt;-->
 
 <style>
-.event-title {
-    color: black; font-family: 'adam.cg pro'; font-size: 45px;
-}
-.event-title-under {
-    width: 210px; height: 0.8px; background-color: #007bff; margin-bottom:10px;
-}
-.grid-container {
-  display: grid;
-  grid-template-columns: auto auto auto;
-}
-.gal-img {
-    width: 360px;
-    height: auto;
-    margin: 20px;
-}
-
-@media screen and (max-width: 770px){
     .event-title {
-     font-size: 30px;
-}
-.event-title-under {
-    width: 150px;
-    margin-bottom: 0;
-}
-.grid-container {
-  display: grid;
-  grid-template-columns: auto;
-}
-.gal-img {
-    width: 240px;
-    height: auto;
-    margin: 10px;
-}
-}
+        color: black;
+        font-family: 'adam.cg pro';
+        font-size: 45px;
+    }
+    
+    .event-title-under {
+        width: 270px;
+        height: 0.8px;
+        background-color: #007bff;
+        margin-bottom: 10px;
+    }
+    
+    .grid-container {
+        display: grid;
+        grid-template-columns: auto auto auto;
+    }
+    
+    .gal-img {
+        width: 360px;
+        height: auto;
+        margin: 20px;
+    }
+    
+    @media screen and (max-width: 770px) {
+        .event-title {
+            font-size: 30px;
+        }
+        .event-title-under {
+            width: 150px;
+            margin-bottom: 0;
+        }
+        .grid-container {
+            display: grid;
+            grid-template-columns: auto;
+        }
+        .gal-img {
+            width: 240px;
+            height: auto;
+            margin: 10px;
+        }
+    }
 </style>
 
-    <!-- Event 1-->
-    <h1 class="d-flex justify-content-center event-title">Teacher's Day:</h1>
-        <hr class="d-block mx-auto event-title-under">
-        <br>
-    <div class="grid-container col-md-11" style="justify-content: center; margin: auto;">
-      <img class="gal-img" src="{% static 'pages/gallery-slideshow/teachers-day-2019/TD1.png' %}">
-      <img class="gal-img" src="{% static 'pages/gallery-slideshow/teachers-day-2019/TD2.png' %}">
-      <img class="gal-img" src="{% static 'pages/gallery-slideshow/teachers-day-2019/TD3.png' %}">
-      <img class="gal-img" src="{% static 'pages/gallery-slideshow/teachers-day-2019/TD4.png' %}">
-      <img class="gal-img" src="{% static 'pages/gallery-slideshow/teachers-day-2019/TD5.png' %}">
-      <img class="gal-img" src="{% static 'pages/gallery-slideshow/teachers-day-2019/TD6.png' %}">
-      <img class="gal-img" src="{% static 'pages/gallery-slideshow/teachers-day-2019/TD7.png' %}">
-    </div>
-    <!-- Event 1-->
+<!-- Event 1-->
+<h1 class="d-flex justify-content-center event-title">Teacher's Day:</h1>
+<hr class="d-block mx-auto event-title-under">
+<br>
+<div class="grid-container col-md-11" style="justify-content: center; margin: auto;">
+    <img class="gal-img" src="{% static 'pages/gallery-slideshow/teachers-day-2019/TD1.png' %}">
+    <img class="gal-img" src="{% static 'pages/gallery-slideshow/teachers-day-2019/TD2.png' %}">
+    <img class="gal-img" src="{% static 'pages/gallery-slideshow/teachers-day-2019/TD3.png' %}">
+    <img class="gal-img" src="{% static 'pages/gallery-slideshow/teachers-day-2019/TD4.png' %}">
+    <img class="gal-img" src="{% static 'pages/gallery-slideshow/teachers-day-2019/TD5.png' %}">
+    <img class="gal-img" src="{% static 'pages/gallery-slideshow/teachers-day-2019/TD6.png' %}">
+    <img class="gal-img" src="{% static 'pages/gallery-slideshow/teachers-day-2019/TD7.png' %}">
+</div>
+<!-- Event 1-->
 
-    <!-- Event 2-->
+<!-- Event 2-->
 <br><br><br>
-    <h1 class="d-flex justify-content-center event-title">Intern Talks:</h1>
-        <hr class="d-block mx-auto event-title-under">
-        <br>
-    <div class="grid-container col-md-11" style="justify-content: center; margin: auto;">
-      <img class="gal-img" src="{% static 'pages/gallery-slideshow/intern-talk-2019/IT1.png' %}">
-      <img class="gal-img" src="{% static 'pages/gallery-slideshow/intern-talk-2019/IT2.png' %}">
-      <img class="gal-img" src="{% static 'pages/gallery-slideshow/intern-talk-2019/IT3.png' %}">
-      <img class="gal-img" src="{% static 'pages/gallery-slideshow/intern-talk-2019/IT4.png' %}">
-      <img class="gal-img" src="{% static 'pages/gallery-slideshow/intern-talk-2019/IT5.png' %}">
-      <img class="gal-img" src="{% static 'pages/gallery-slideshow/intern-talk-2019/IT6.png' %}">
-    </div>
-    <!-- Event 2-->
+<h1 class="d-flex justify-content-center event-title">Intern Talks:</h1>
+<hr class="d-block mx-auto event-title-under">
+<br>
+<div class="grid-container col-md-11" style="justify-content: center; margin: auto;">
+    <img class="gal-img" src="{% static 'pages/gallery-slideshow/intern-talk-2019/IT1.png' %}">
+    <img class="gal-img" src="{% static 'pages/gallery-slideshow/intern-talk-2019/IT2.png' %}">
+    <img class="gal-img" src="{% static 'pages/gallery-slideshow/intern-talk-2019/IT3.png' %}">
+    <img class="gal-img" src="{% static 'pages/gallery-slideshow/intern-talk-2019/IT4.png' %}">
+    <img class="gal-img" src="{% static 'pages/gallery-slideshow/intern-talk-2019/IT5.png' %}">
+    <img class="gal-img" src="{% static 'pages/gallery-slideshow/intern-talk-2019/IT6.png' %}">
+</div>
+<!-- Event 2-->
 
-<br><br><br>
-{% endblock content %}
+<br><br><br> {% endblock content %}
