--- a/SPE-website/pages/templates/pages/gallery1.html
+++ b/SPE-website/pages/templates/pages/gallery1.html
@@ -263,7 +263,7 @@
     }
     
     .event-title-under {
-        width: 270px;
+        width: 80%;
         height: 0.8px;
         background-color: #007bff;
         margin-bottom: 10px;
