--- a/SPE-website/pages/templates/pages/gallery1.html
+++ b/SPE-website/pages/templates/pages/gallery1.html
@@ -293,7 +293,7 @@
             grid-template-columns: auto;
         }
         .gal-img {
-            width: 80%;
+            width: 240px;
             height: auto;
             margin: 10px;
         }
