--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -98,14 +98,14 @@
             <!-- Links -->
             <ul class="navbar-nav ml-auto">
 
+                <li class="nav-item" id="LowNavLink2">
+                    <a class="low-nav-item" href="{% url 'about-page' %}">About Us</a>
+                </li>
                 <li class="nav-item" id="LowNavLink0">
                     <a class="low-nav-item" href="{% url 'core-team' %}">Core Team</a>
                 </li>
                 <li class="nav-item" id="LowNavLink1">
                     <a class="low-nav-item" href="{% url 'contact-page' %}">Contact Us</a>
-                </li>
-                <li class="nav-item" id="LowNavLink2">
-                    <a class="low-nav-item" href="{% url 'about-page' %}">About Us</a>
                 </li>
 
             </ul>
@@ -159,6 +159,7 @@
                                 <p><a class="imp-link" href="https://www.iitism.ac.in/">IIT ISM Official Website</a></p>
                                 <p><a class="imp-link" href="https://parent.iitism.ac.in/index.php/parent_portal/portal0">Parents Portal</a></p>
                                 <p><a class="imp-link" href="https://www.fipi.org.in/">FIPI</a></p>
+                                <p><a class="imp-link" href="https://connect.spe.org/">SPE Connect</a></p>
                             </div>
                         </div>
                     </div>
