--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -11,6 +11,21 @@
 
 </style>
 
+<style>
+    .grid-container {
+        justify-content: center;
+        margin: auto;
+    }
+    .grid-container-3-col {
+        justify-content: center;
+        margin: auto;
+    }
+     @media screen and (min-width: 1200px) {
+     .flip-card { margin: 70px; }
+      }
+    @media screen and (max-width: 770px) { .flip-card { margin: 20px; } }
+</style>
+
     <br><br><br><br><br>
 
     <div class="container col-md-11">
