gazette button functional

--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -582,7 +582,7 @@
                                     <i class="material-icons ">subject</i> Read
                                 </a> -->
                         <div class="container " style=" margin: 0 auto; width: 100%; text-align: center; ">
-                            <a href="# " class="button " style="font-size: 20px; ">Read more</a>
+                            <a href="{% url 'gazette-page' %} " class="button " style="font-size: 20px; ">Read more</a>
                         </div>
                     </div>
                 </div>
