--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -145,7 +145,7 @@
                         <h3>Contact</h3>
                         <p><i class="fas fa-map-marker-alt"></i> Department of Petroleum Engineering, IIT (ISM) Dhanbad (695.89 km) 826004 Dhanbad, Jharkhand, India</p>
                         <p><i class="fas fa-phone"></i> Phone: 087098 43266</p>
-                        <p><i class="fas fa-envelope"></i> Email: <a href="#">speiitismsc@domain.com</a></p>
+                        <p><i class="fas fa-envelope"></i> Email: <a href="#">Speiitism@gmail.com</a></p>
                     </div>
                     <div class="col-md-3 offset-md-1 footer-links">
                         <div class="row">
