--- a/SPE-website/pages/templates/pages/contact-us.html
+++ b/SPE-website/pages/templates/pages/contact-us.html
@@ -35,7 +35,7 @@
             <!-- Contact Number -->
 
             <!-- Email -->
-            <p class="contact-info"><i class="fas fa-envelope"></i> Email: speiitismsc@domain.com</p>
+            <p class="contact-info"><i class="fas fa-envelope"></i> Email: Speiitism@gmail.com</p>
             <!-- Email -->
 
             <!-- Query Form-->
