--- a/SPE-website/pages/templates/pages/gazette.html
+++ b/SPE-website/pages/templates/pages/gazette.html
@@ -9,6 +9,10 @@
 
        <br><br><br><br><br>
 
+<!-- Store the compressed gazette pdf in the google drive -->
+<!-- if the drive link is https://drive.google.com/file/d/1dqplmQ661ODcjdlNYwOfUeLjpvkg53Wl/view?usp=sharing -->
+<!-- change it to this format https://drive.google.com/file/d/1dqplmQ661ODcjdlNYwOfUeLjpvkg53Wl/preview -->
+
     <div class="d-block mx-auto col-md-10  media">
         <h1 class="d-flex justify-content-center" id="PageTitle">Gazette</h1>
         <hr class="d-flex justify-content-center" id="UnderlineTitle">
@@ -20,7 +24,7 @@
               <div class="grid-item">
                   <div class="container" >
                     <iframe frameborder="0" scrolling="no" width="320" height="240"
-                                src="https://drive.google.com/file/d/1FfAbfwEfmKv4Bgj6XAc8KyYZtiP8QSIm/preview"></iframe>
+                                src="https://drive.google.com/file/d/1dqplmQ661ODcjdlNYwOfUeLjpvkg53Wl/preview"></iframe>
                     <div>Gazette 2020</div>
                 </div>
               </div>
@@ -28,7 +32,7 @@
               <div class="grid-item">
                   <div class="container">
                     <iframe frameborder="0" scrolling="no" width="320" height="240"
-                                src="https://drive.google.com/file/d/1Jp5FNTGoW5gz938FEszqCWI4GWpc7yUd/preview"></iframe>
+                                src="https://drive.google.com/file/d/1Jqgl8sciP1zwWW-7HcX0-vtaiMoY3Xc0/preview"></iframe>
                     <div>Gazette 2019</div>
                 </div>
               </div>
@@ -36,7 +40,7 @@
               <div class="grid-item">
                   <div class="container">
                     <iframe frameborder="0" scrolling="no" width="320" height="240"
-                                src="https://drive.google.com/file/d/1CdTkQixJRZnhObzdctt_9lqGr9l_JzLs/preview"></iframe>
+                                src="https://drive.google.com/file/d/1czcpQ55G7kfEAUvOGPx5cdLyjiInSMhL/preview"></iframe>
                     <div>Gazette 2018</div>
                 </div>
               </div>
@@ -44,7 +48,7 @@
               <div class="grid-item">
                   <div class="container">
                     <iframe frameborder="0" scrolling="no" width="320" height="240"
-                                src="https://drive.google.com/file/d/1Jp5FNTGoW5gz938FEszqCWI4GWpc7yUd/preview"></iframe>
+                                src="https://drive.google.com/file/d/1czcpQ55G7kfEAUvOGPx5cdLyjiInSMhL/preview"></iframe>
                     <div>Gazette 2017</div>
                 </div>
               </div>
@@ -52,7 +56,7 @@
               <div class="grid-item">
                   <div class="container">
                     <iframe frameborder="0" scrolling="no" width="320" height="240"
-                                src="https://drive.google.com/file/d/1Jp5FNTGoW5gz938FEszqCWI4GWpc7yUd/preview"></iframe>
+                                src="https://drive.google.com/file/d/1czcpQ55G7kfEAUvOGPx5cdLyjiInSMhL/preview"></iframe>
                     <div>Gazette 2016</div>
                 </div>
               </div>
