--- a/SPE-website/pages/templates/pages/gazette.html
+++ b/SPE-website/pages/templates/pages/gazette.html
@@ -56,7 +56,7 @@
               <div class="grid-item">
                   <div class="container">
                     <iframe frameborder="0" scrolling="no" width="320" height="240"
-                                src="https://drive.google.com/file/d/1dJX6HCaB7yLxJ66OvQMzxoktdZbcXJnp/view?preview"></iframe>
+                                src="https://drive.google.com/file/d/1dJX6HCaB7yLxJ66OvQMzxoktdZbcXJnp/preview"></iframe>
                     <div>Gazette 2016</div>
                 </div>
               </div>
